Corrected header on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
   flex-direction: column;
   max-width: 1200px;
   margin: auto;
+  position: absolute;
+  top: 10%;
 }
 
 .App-header {
