--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,10 +1,14 @@
-.header{
-    background-color: #2D384A;
-    /* height: 200px; */
-    color: white;
-    width: 100%;
+.header {
+  position: absolute;
+  top: 0px;
+  background-color: #2d384a;
+  width: 100%;
+  height: 10%;
 }
 
-.header h1{
-    margin: 2em;
+.headerH {
+  align-items: center;
+  justify-content: center;
+  color: white;
+  text-align: center;
 }
